css/main.css
@import url('https://fonts.googleapis.com/css2?family=Inter&family=Righteous&display=swap');

html {
  box-sizing: border-box;
  font-family: "Righteous", sans-serif;
  line-height: 1.5;
  margin: 0;
  /* background-color: #f0e9dc; */
}

*, *::before, *::after {
  box-sizing: inherit;
}

.hero-banner {
  background-image: url(https://www3.pictures.itsrosy.com/mp/F1knTqVgCtfx.jpg);
  height: 100%;
  height: 40vh;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

h1 {
  background-color: rgba(0, 0, 0, 0.7);
  padding: 1rem 0;
  text-align: center;
  position: relative;
  top: 150px;
  font-size: 1.5rem;
  color: #f0e9dc;
}

p {
  font-family: "Inter", sans-serif;
  font-size: .9rem;
}

h2 {
  color: #1f1c27;
  font-size: 1.5rem;
}

nav img {
  height: 40px;
  padding-left: .3rem;
}

nav {
    background-color: rgba(189, 81, 145, 0.7);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 5px;
}

nav ul {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

nav ul li {
  list-style-type: none;
  padding: .3rem .3rem;
}

nav ul li a {
  text-decoration: none;
  color: #f0e9dc;
  background-color: #1f1c27;
  padding: .3rem .7rem;
  border-radius: 1.5rem;
  font-size: .8rem;
}

nav ul li a:hover {
  color: black;
  background-color: #f0e9dc;
}

.page-nav {
  display: flex;
  justify-content: center;
}

.page-nav ul {
  list-style: none;
  display: flex;
  justify-content: space-around;
  padding: 0;
}

.page-nav ul li {
  padding: 1.5rem;
}

.page-nav ul li a {
  text-decoration: none;
  color: #f0e9dc;
  background-color: black;
  padding: .5rem .7rem;
  border-radius: 1.5rem;
}

.page-nav ul li a:hover {
  color: #1f1c27;
  background-color: rgba(189, 81, 145);
}

#history {
  margin-top: 0;
}

.history, .inspiration, .influences {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.history, .influences {
  /* padding: 0 1rem 4rem; */
  padding: 0 1rem;
}

.inspiration {
    padding: 0 1rem 1.5rem;
}

.index-section article h2 {
  color: rgba(189, 81, 145);
  padding: 0 1rem;
}

.index-section article p {
  padding: 0 1rem;
}

.index-section img {
  width: 400px;
}


/* GENRES */
.other-nav {
  background-color: rgba(189, 81, 145);
}

.h2-genre {
  margin-left: 2rem;
}

h3 {
  font-size: 1.3rem;
  /* font-size: 1.5rem; */
  color: #f0e9dc;
  font-weight: lighter;
  text-align: left;
  padding-left: 1rem;
}

.genres{
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
  margin: 2rem;
}

.genres img {
  width: 100%;
  display: block;
}

.genres article {
  background-color: rgba(189, 81, 145);
}

.genres li {
  list-style-type: none;
  color: #f0e9dc;
  font-family: "Inter", sans-serif;
}

.genres ul {
  padding: 0;
  text-align: center;
}

.slide {
  position: relative;
  overflow: hidden;
}

.slide p {
  opacity: 1;
  transform: translateX(-100%);
  color: #1f1c27;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  /* flex-direction: column; */
  justify-content: center;
  align-items: center;
  background: rgba(192,192,192, 0.8);
}

.slide p, .slide img {
  transition: transform .6s ease-out;
}

.slide:hover p {
	transform: translateX(0);
}

.slide:hover img {
  transform: translateX(100%);
}

footer {
  background: rgba(189, 81, 145);
  /* padding: 2rem 0; */
  padding: 1rem 0;
  text-align: right;
}

footer small {
  padding-right: 1.5rem;
  font-family: "Inver", sans-serif;
}

/* CONTACT */

.contact-main {
  margin: 1rem 0 2rem;
}

.top {
  text-align: center;
  color: #1f1c27;
}

.top p {
  margin: 0;
}

.container {
    min-width:100%;
    max-height: 100%;

}

input, textarea {
    display:block;
    border: 1px solid #1f1c27;
    width:50%;
    margin: 2rem auto;
    padding: 1rem;
    color: #1f1c27;
    font-family: "Inter", sans-serif;
}

.message {
    height:150px;

}

.button {
  text-align: right;
}

.btn {
  background-color: #d43f39;
  text-align: right;
  margin-right: 25%;
  text-decoration: none;
  color: #f0e9dc;
  font-size: 1rem;
  padding: 5px 7px;
  /* font-size: 1.3rem;
  padding: 10px 15px; */
  border-radius: 25px;

}

.btn:hover {
  background-color: #f0e9dc;
  color: #1f1c27;
  transition: all 400ms linear;
}

.btn::before {
  font-family: "Material Icons Outlined";
  content: 'send';
  vertical-align: middle;
  padding-right: 5px;
}

/* MEDIA QUERIES */
@media only screen and (min-width: 768px) {
  .hero-banner {
    height: 50vh;
  }
  h1 {
    top: 200px;
    font-size: 2rem;
  }
  h2 {
  font-size: 1.8rem;
  }
  h3{
  font-size: 1.5rem;
  }
  .index-section img {
    width: 700px;
    margin: auto;
  }
  p {
    font-size: 1rem;
  }

  .history, .inspiration, .influences {
    text-align: left;
  }

  nav img {
    height: 50px;
  }

  nav ul li {
    padding: 1rem;
  }

  nav ul li a {
    font-size: 1rem;
    padding: .5rem .8rem;
  }

  a {
    font-size: 1.3rem;
  }

  .genres{
    grid-template-columns: 1fr 1fr;
}

@media only screen and (min-width: 1280px){

  .hero-banner {
    height: 60vh;
  }

  h1 {
    top: 275px;
    font-size: 2.5rem;
  }
  h2 {
    font-size: 2rem;
  }
  h3 {
    font-size: 1.7rem;
  }
  .index-section img {
    width: 600px;
  }

  .history, .inspiration, .influences {
    flex-direction: row;
    align-items: center;
    text-align: left;
  }

  .influences {
    flex-direction: row-reverse;
  }
  .genres{
    grid-template-columns: 1fr 1fr 1fr;
  }
  .history {
    margin-top: 1rem;
  }

}

